--- a/decrypter/settings.json
+++ b/decrypter/settings.json
@@ -1,5 +1,5 @@
 {
-    "key": "MXsP1F5wOQk4PsDe/f/RiP6NwwMY+xuCX3qZtTxHnbk=",
-    "default_folder": "../private",
-    "output_folder": "outputs"
+    "key": "133Qy2le9qdV4OO/L3q8OP6cakuCeEq0QDIYDJPTBSg=",
+    "default_folder": "C:\\Projects\\secret-thoughts\\private",
+    "output_folder": "C:\\Projects\\secret-thoughts\\decrypter\\outputs"
 }
